Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10883

llog backup files processing is not skipped because of string сomparison error

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.13.0
    • Lustre 2.11.0
    • None
    • 3
    • 9223372036854775807

      Buggy code was introduced in LU-7160 fix

      		/* filter out ".bak" files */
      		/* sizeof(".bak") - 1 == 3 */
      		if (key_sz >= 3 &&
      		    !memcmp(".bak", key + key_sz - 3, 3)) {
      			CDEBUG(D_MGS, "Skipping backup file %.*s\n",
      			       key_sz, key);
      			goto next;
      		}
      

      4 last key's bytes need to be compared with ".bak"

            artem_blagodarenko Artem Blagodarenko (Inactive)
            artem_blagodarenko Artem Blagodarenko (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: